# Rookie-Agent

./: .gitignore  Cargo.toml  EXECUTION_SUMMARY_CCB_ROADMAP.md  EXECUTION_SUMMARY_P1_P3.md  TUI-MANUAL.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  napi.yml  publish.yml  release.yml
crates/rookie-cli/: Cargo.toml
crates/rookie-cli/src/: main.rs
crates/rookie-core/: Cargo.toml  build.rs
crates/rookie-core/src/: lib.rs  server.rs  tokenizer.rs
crates/rookie-core/src/agent/: blackboard.rs  mod.rs
crates/rookie-core/src/ast/: engine.rs  mod.rs  query.rs
crates/rookie-core/src/diff/: engine.rs  mod.rs  patch.rs
crates/rookie-core/src/hook/: dispatch.rs  mod.rs  rhai_engine.rs  types.rs
crates/rookie-core/src/index/: mod.rs  tantivy.rs  walker.rs  watcher.rs
crates/rookie-core/src/knowledge/: graph.rs  mod.rs
crates/rookie-core/src/logger/: mod.rs
crates/rookie-core/src/memory/: mod.rs  store.rs  vector.rs
crates/rookie-core/src/napi/: bindings.rs  diff.rs  mod.rs  search.rs
crates/rookie-core/src/permission/: engine.rs  mod.rs  types.rs
crates/rookie-core/src/scheduler/: cron.rs  mod.rs
crates/rookie-core/src/search/: glob.rs  grep.rs  mod.rs
crates/rookie-core/src/skill/: matcher.rs  mod.rs
crates/rookie-core/src/symbol/: mod.rs  resolver.rs
crates/rookie-core/tests/: ast_engine_smoke.rs  blackboard_test.rs  diff_engine_test.rs  hook_dispatch_test.rs  index_smoke.rs  logger_smoke.rs  memory_store_test.rs  permission_engine_test.rs  rhai_engine_test.rs  scheduler_test.rs  search_glob_test.rs  search_grep_test.rs  skill_matcher_test.rs  symbol_smoke.rs  vector_index_test.rs
crates/rookie-napi/: Cargo.toml
crates/rookie-napi/src/: lib.rs  tokenizer.rs
crates/rookie-napi/src/context/: budget.rs  collapse.rs  compact.rs  mod.rs  normalize.rs  pipeline.rs  snip.rs
crates/rookie-napi/tests/: pipeline_tests.rs  tokenizer_tests.rs
docs/: index.md
docs/.vitepress/: config.ts
docs/api/: agents.md  cli-config.md  cli.md  client.md  index.md  memory.md  tools.md
docs/eval/: 2026-04-23-readme-test.md
docs/examples/: codebase-qa.md  daily-standup.md  fix-issue.md  index.md  pr-review.md
docs/guide/: gateway.md  hooks.md  index.md  installation.md  memory.md  models.md  permissions.md  quick-start.md  scheduler.md  self-optimization.md  settings.md  skills.md
docs/superpowers/specs/: 2026-04-22-rookie-agent-design-v2.md  2026-04-22-rookie-agent-design.md  2026-04-23-rookie-agent-ccb-alignment-roadmap.md  2026-04-23-rookie-agent-gap-analysis-and-roadmap.md  2026-04-27-hermes-alignment-roadmap-v2.md
