[workspace]
members = ["crates/rookie-core", "crates/rookie-cli"]
resolver = "2"

[workspace.dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tantivy = "0.22"
notify = "7"
ignore = "0.4"
dashmap = "6"
lru = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
