[package]
name = "rookie-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-rust = { workspace = true }
tantivy = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
streaming-iterator = "0.1.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
