[package]
name = "rookie-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
rookie-core = { path = "../rookie-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
lru = { workspace = true }
tiktoken-rs = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
